--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ body {
 
 <div id="mySidenav" class="sidenav" style="font-family:’Paytone One’, sans-serif">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://ktmcburnie.github.io/index/about.html">About</a>
-  <a href="https://ktmcburnie.github.io/index/skills & experience.html">Experience</a>
-  <a href="https://ktmcburnie.github.io/index/portfolio.html">Portfolio</a>
-  <a href="https://ktmcburnie.github.io/index/contact.html">Contact</a>
+  <a href="about.html">About</a>
+  <a href="skills & experience.html">Experience</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="contact.html">Contact</a>
 </div>
 
 <div id="main">
