--- a/about.html
+++ b/about.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <body>
 <html>
-<head><link rel="stylesheet" type="text/css" href="index.css"></head>
-<p>KT is a full-stack developer with an eye for all things creative. Her focus is on the creation of beautiful web applications that emphasize streamlined user experience and responsive design.<br>
+<head><link rel="stylesheet" type="text/css" href="index.css">
+<style>
+p {
+font-size:30pt;
+color: Aqua; 
+font-family:’Paytone One’, sans-serif;}
+img {
+    float: right;
+    margin: 0 0 10px 10px;
+}
+</style>
+</head>
+<p> <img src="index/About_medium.jpg" alt="About Me">
+KT is a full-stack developer with an eye for all things creative. <br>
+Her focus is on the creation of beautiful web applications that emphasize <br>
+streamlined user experience and responsive design.<br>
 <br>
-After graduating with a Bachelor of Science in Computer Information Technology in 2017, KT has focused on creating web applications for non-profits via <a href=“https://www.freecodecamp.com/”>Free Code Camp</a>.  You can view her work <a href=“https://github.com/ktmcburnie”>here</a>.<br>
+After graduating with a Bachelor of Science in Computer Information Technology<br>
+in 2017, KT has focused on creating web applications for non-profits via <a href=“https://www.freecodecamp.com/”>Free Code Camp</a>.<br>  
+You can view her work <a href=“https://github.com/ktmcburnie”>here</a>.<br>
 <br>
-During her downtime, KT can be found in Phoenix with her boyfriend, Nick. She enjoys playing guitar and attending local music shows, baking (which doesn’t always end well), and going to the park with her three Boston Terriers, Emma, Scarlet, and Lola.  </p>
+During her downtime, KT can be found in Phoenix with her boyfriend, Nick. <br>
+She enjoys playing guitar and attending local music shows, baking, and going <br>
+to the park with her three Boston Terriers, Emma, Scarlet, and Lola.  
+</p>
 
 </body>
 </html>
