--- a/about.html
+++ b/about.html
@@ -3,17 +3,13 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="index.css">
 <style>
-p {
-font-size:12pt;
-color: Aqua; 
-font-family:’Paytone One’, sans-serif;}
 img {
     float: right;
     margin: 0 0 10px 10px;
 }
 </style>
 </head>
-<p> <img src="index/About_medium.jpg" alt="About Me">
+<img src="index/About_medium.jpg" alt="About Me">
 KT is a full-stack developer with an eye for all things creative. <br>
 Her focus is on the creation of beautiful web applications that emphasize <br>
 streamlined user experience and responsive design.<br>
@@ -25,7 +21,7 @@ You can view her work <a href=“https://github.com/ktmcburnie”>here</a>.<br>
 During her downtime, KT can be found in Phoenix with her boyfriend, Nick. <br>
 She enjoys playing guitar and attending local music shows, baking, and going <br>
 to the park with her three Boston Terriers, Emma, Scarlet, and Lola.  
-</p>
+
 
 </body>
 </html>
