Removed index/ from img
Tried removing index/ from img src and just using file name

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ img {
 }
 </style>
 </head>
-<img src="index/aboutmedium.jpg" alt="About Me">
+<img src="aboutmedium.jpg" alt="About Me">
 KT is a full-stack developer with an eye for all things creative. <br>
 Her focus is on the creation of beautiful web applications that emphasize <br>
 streamlined user experience and responsive design.<br>
