--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@ img {
     float: right;
     margin: 0 0 10px 10px;
 }
+    body {
+        font-size: 17pt;
+    }
 </style>
 </head>
 <img src="aboutmedium.jpg" alt="About Me">
@@ -15,8 +18,7 @@ Her focus is on the creation of beautiful web applications that emphasize <br>
 streamlined user experience and responsive design.<br>
 <br>
 After graduating with a Bachelor of Science in Computer Information Technology<br>
-in 2017, KT has focused on creating web applications for non-profits via <a href=“https://www.freecodecamp.com/”>Free Code Camp</a>.<br>  
-You can view her work <a href=“https://github.com/ktmcburnie”>here</a>.<br>
+in 2017, KT has focused on creating web applications for non-profits via Free Code Camp<br>  
 <br>
 During her downtime, KT can be found in Phoenix with her boyfriend, Nick. <br>
 She enjoys playing guitar and attending local music shows, baking, and going <br>
