--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@ img {
     float: right;
     margin: 0 0 10px 10px;
 }
-    body {
+    p {
         font-size: 17pt;
     }
 </style>
 </head>
-<img src="aboutmedium.jpg" alt="About Me">
+<p><img src="aboutmedium.jpg" alt="About Me">
 KT is a full-stack developer with an eye for all things creative. <br>
 Her focus is on the creation of beautiful web applications that emphasize <br>
 streamlined user experience and responsive design.<br>
@@ -23,7 +23,7 @@ in 2017, KT has focused on creating web applications for non-profits via Free Co
 During her downtime, KT can be found in Phoenix with her boyfriend, Nick. <br>
 She enjoys playing guitar and attending local music shows, baking, and going <br>
 to the park with her three Boston Terriers, Emma, Scarlet, and Lola.  
-
+    </p>
 
 </body>
 </html>
