--- a/about.html
+++ b/about.html
@@ -14,15 +14,17 @@ img {
 </head>
 <p><img src="aboutmedium.jpg" alt="About Me">
 KT is a full-stack developer with an eye for all things creative. <br>
-Her focus is on the creation of beautiful web applications that emphasize <br>
-streamlined user experience and responsive design.<br>
+Her focus is on the creation of beautiful web applications that<br> 
+emphasize streamlined user experience and responsive design.<br>
 <br>
-After graduating with a Bachelor of Science in Computer Information Technology<br>
-in 2017, KT has focused on creating web applications for non-profits via Free Code Camp<br>  
+After graduating with a Bachelor of Science in Computer <br>
+Information Technology in 2017, KT has focused on creating <br>
+web applications for non-profits via Free Code Camp.<br>  
 <br>
-During her downtime, KT can be found in Phoenix with her boyfriend, Nick. <br>
-She enjoys playing guitar and attending local music shows, baking, and going <br>
-to the park with her three Boston Terriers, Emma, Scarlet, and Lola.  
+During her downtime, KT can be found in Phoenix with her <br>
+boyfriend, Nick. She enjoys playing guitar and attending <br>
+local music shows, baking, and going to the park with her <br>
+three Boston Terriers, Emma, Scarlet, and Lola.  
     </p>
 
 </body>
