Add contact form
Still need to add php/mailto

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
 <body>
 <html>
-<head><link rel="stylesheet" type="text/css" href="index.css"></head>
+<head><link rel="stylesheet" type="text/css" href="index.css">
+<style>
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: gray;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+/* When moving the mouse over the submit button, add a darker color */
+input[type=submit]:hover {
+    background-color: aqua;
+}
+/* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: black;
+    padding: 20px;
+}
+</style>
+</head>
 
+
+<h1>Questions? Comments? Drop me a line!</h1>
+
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="What's on your mind?" style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
 </body>
 </html>
